<resources>
    <string name="app_name">LeagueTok</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <string name="action_upload">Upload</string>
    <string name="grade">Your Score</string>
    <string name="league_title">View League Table</string>
    <string name="league">League</string>
    <string name="rank">Your League Rank</string>
    <string name="upload_upper_title">Let\'s see you try</string>
    <string name="upload_title">%1$s by %2$s</string>
    <string name="gallery_upload">Upload your TikTok dance from the gallery</string>
    <string name="gallery_upload_original_video">Upload a TikTok dance from the gallery</string>
    <string name="error_message">We are sorry but there was a problem while processing your video :(</string>
    <string name="action_try">Try It</string>
    <string name="league_table">League</string>
    <string name="count_tries">- %1$d people tried it -</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league_rank">Rank</string>
    <string name="league_name">Name</string>
    <string name="league_score">Score</string>
    <string name="league_table_title">League Table</string>
    <string name="lower_score">New score is lower than previous attempts :( \nBetter luck next time! </string>
    <string name="league_table_button">League Table</string>
    <string name="upload_status_video">Uploading video</string>
    <string name="upload_status_process">Processing video</string>
    <string name="upload_status_wait">It might take a while, we\'ll let you know when it\'s ready</string>
    <string name="profile_tryouts">My Tryouts:</string>
    <string name="upload_percentage">%1$d%%</string>
    <string name="upload_original_video_title">Upload a new Challenge</string>
</resources>