<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.leaguetok.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_uploadVideoFragment"
            app:destination="@id/uploadVideoFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.leaguetok.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.leaguetok.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/uploadVideoFragment"
        android:name="com.example.leaguetok.ui.UploadVideoFragment"
        android:label="fragment_upload_video"
        tools:layout="@layout/fragment_upload_video" >
        <action
            android:id="@+id/action_uploadVideoFragment_to_navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>
</navigation>