<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload_image_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadVideoFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/upload_upper_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upload_video_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/upload_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/upload_img_and_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_video_title">

        <TextView
            android:id="@+id/upload_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gallery_upload"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/upload_video_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_upload_video" />
    </LinearLayout>

    <TextView
        android:id="@+id/upload_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="right"
        android:text="@string/upload_status_process"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_video_title" />

    <com.eyalbira.loadingdots.LoadingDots
        android:id="@+id/upload_loadingDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:LoadingDots_dots_color="@color/pink"
        app:LoadingDots_dots_count="3"
        app:LoadingDots_dots_size="5dp"
        app:LoadingDots_jump_height="12dp"
        app:LoadingDots_loop_start_delay="20"
        app:layout_constraintBottom_toBottomOf="@+id/upload_status_text"
        app:layout_constraintStart_toEndOf="@+id/upload_status_text"
        app:layout_constraintTop_toTopOf="@+id/upload_status_text">

    </com.eyalbira.loadingdots.LoadingDots>

    <TextView
        android:id="@+id/upload_wait_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/upload_status_wait"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_status_text" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/upload_progress_bar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="invisible"
        app:cpb_background_progressbar_color="@color/pink"
        app:cpb_background_progressbar_width="12dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/aqua"
        app:cpb_progressbar_width="8dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_wait_text" />

    <TextView
        android:id="@+id/upload_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_percentage"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/upload_progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/upload_progress_bar"
        app:layout_constraintStart_toStartOf="@+id/upload_progress_bar"
        app:layout_constraintTop_toTopOf="@+id/upload_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>